--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </a>
 
             <a href="#" class="logo">
-                <img src="./assets/images/logo.svg" alt="Tourly logo">
+                <img src="./assets/images/logo.png" alt="Gangawata logo" style="width: 150px">
             </a>
 
             <div class="header-btn-group">
@@ -233,7 +233,7 @@
         <!--
           - #Vehicles
         -->
-        <section class="popular" id="vehicles">
+        <section class="popular" id="vehicles" style="padding-bottom: 0px">
             <div class="container">
 
                 <p class="section-subtitle">Available Vehicles</p>
@@ -260,9 +260,9 @@
         <section class="package" id="package">
             <div class="container">
 
-                <p class="section-subtitle">Popular Packeges</p>
+                <p class="section-subtitle">Popular Packages</p>
 
-                <h2 class="h2 section-title">Checkout Our Packeges</h2>
+                <h2 class="h2 section-title">Checkout Our Packages</h2>
 
                 <p class="section-text">
                     Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque
@@ -645,7 +645,7 @@
             <div class="footer-brand">
 
                 <a href="#" class="logo">
-                    <img src="./assets/images/logo.svg" alt="logo">
+                    <img src="./assets/images/logo.png" alt="logo">
                 </a>
 
                 <p class="footer-text">
