Update contact function

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </a>
 
             <a href="#" class="logo">
-                <img src="./assets/images/logo.png" alt="Gangawata logo" style="width: 150px">
+                <img src="./assets/images/logo.png" alt="Gangawata logo" style="width: 135px">
             </a>
 
             <div class="header-btn-group">
@@ -580,7 +580,7 @@
 
                     <p class="section-text">
                         Experience unforgettable journeys with us. Discover hidden gems and iconic landmarks across Sri
-                        Lanka. Ready to create lasting memories? Plan your next adventure with us today."
+                        Lanka. Ready to create lasting memories? Plan your next adventure with us today.
                     </p>
                 </div>
 
@@ -592,7 +592,7 @@
 
                 <form action="" class="tour-search-form" id="tour-search-form">
                     <div class="input-wrapper">
-                        <label for="name" class="input-label">Name*</label>
+                        <label for="name" class="input-label">Name</label>
                         <input type="text" name="name" id="name"  placeholder="Enter Name" class="input-field">
                     </div>
 
@@ -602,22 +602,22 @@
                     </div>
 
                     <div class="input-wrapper">
-                        <label for="destination" class="input-label">Destination*</label>
+                        <label for="destination" class="input-label">Destination</label>
                         <input type="text" name="place" id="place"  placeholder="Enter Destination" class="input-field">
                     </div>
 
                     <div class="input-wrapper">
-                        <label for="people" class="input-label">Pax Number*</label>
+                        <label for="people" class="input-label">Pax Number</label>
                         <input type="number" name="people" id="people"  placeholder="No. of People" class="input-field">
                     </div>
 
                     <div class="input-wrapper">
-                        <label for="checkin" class="input-label">Check-in Date*</label>
+                        <label for="checkin" class="input-label">Check-in Date</label>
                         <input type="date" name="checkin" id="checkin"  class="input-field">
                     </div>
 
                     <div class="input-wrapper">
-                        <label for="checkout" class="input-label">Check-out Date*</label>
+                        <label for="checkout" class="input-label">Check-out Date</label>
                         <input type="date" name="checkout" id="checkout"  class="input-field">
                     </div>
 
@@ -679,13 +679,13 @@
                     <li class="contact-item">
                         <ion-icon name="mail-outline"></ion-icon>
 
-                        <a href="mailto:info.tourly.com" class="contact-link">info.tourly.com</a>
+                        <a href="mailto:gangawatatours@gmail.com" class="contact-link">gangawatatours@gmail.com</a>
                     </li>
 
                     <li class="contact-item">
                         <ion-icon name="location-outline"></ion-icon>
 
-                        <address>3146 Koontz, California</address>
+                        <address>Kandy, Sri Lanka</address>
                     </li>
 
                 </ul>
