--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 -->
 
 <header class="header" data-header>
+    <div id="loading-spinner" class="spinner-container">
+        <div class="spinner"></div>
+        <p>Loading...</p>
+    </div>
 
     <div class="overlay" data-overlay></div>
 
