Update package content

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="header-top">
         <div class="container">
 
-            <a href="tel:+94 00000 0000" class="helpline-box">
+            <a href="tel:+94772323766" class="helpline-box">
 
                 <div class="icon-box">
                     <ion-icon name="call-outline"></ion-icon>
@@ -53,7 +53,7 @@
                 <div class="wrapper">
                     <p class="helpline-title">For Further Inquires :</p>
 
-                    <p class="helpline-number">+94 00000 0000</p>
+                    <p class="helpline-number">+94 77 232 3766</p>
                 </div>
 
             </a>
@@ -80,28 +80,6 @@
     <div class="header-bottom">
         <div class="container">
 
-            <!--        <ul class="social-list">-->
-
-            <!--          <li>-->
-            <!--            <a href="#" class="social-link">-->
-            <!--              <ion-icon name="logo-facebook"></ion-icon>-->
-            <!--            </a>-->
-            <!--          </li>-->
-
-            <!--          <li>-->
-            <!--            <a href="#" class="social-link">-->
-            <!--              <ion-icon name="logo-twitter"></ion-icon>-->
-            <!--            </a>-->
-            <!--          </li>-->
-
-            <!--          <li>-->
-            <!--            <a href="#" class="social-link">-->
-            <!--              <ion-icon name="logo-youtube"></ion-icon>-->
-            <!--            </a>-->
-            <!--          </li>-->
-
-            <!--        </ul>-->
-
             <nav class="navbar" data-navbar>
 
                 <div class="navbar-top">
@@ -121,11 +99,6 @@
                     <li>
                         <a href="#home" class="navbar-link" data-nav-link>home</a>
                     </li>
-
-                    <!--            <li>-->
-                    <!--              <a href="#" class="navbar-link" data-nav-link>about us</a>-->
-                    <!--            </li>-->
-
                     <li>
                         <a href="#destination" class="navbar-link" data-nav-link>destination</a>
                     </li>
@@ -184,32 +157,6 @@
             </div>
         </section>
 
-
-        <!--              <section class="hero" id="home">-->
-        <!--                  -->
-        <!--                <div class="container">-->
-
-        <!--                  <h2 class="h1 hero-title">Journey to explore world</h2>-->
-
-        <!--                  <p class="hero-text">-->
-        <!--                    Ac mi duis mollis. Sapiente? Scelerisque quae, penatibus? Suscipit class corporis nostra rem quos-->
-        <!--                    voluptatibus habitant?-->
-        <!--                    Fames, vivamus minim nemo enim, gravida lobortis quasi, eum.-->
-        <!--                  </p>-->
-
-        <!--                  <div class="btn-group">-->
-        <!--                    <button class="btn btn-primary">Learn more</button>-->
-
-        <!--                    <button class="btn btn-secondary">Book now</button>-->
-        <!--                  </div>-->
-
-        <!--                </div>-->
-        <!--              </section>-->
-
-
-
-
-
         <!--
           - #POPULAR
         -->
@@ -218,7 +165,7 @@
 
                 <p class="section-subtitle">Uncover place</p>
 
-                <h2 class="h2 section-title">Popular destination</h2>
+                <h2 class="h2 section-title">Popular destinations</h2>
 
                 <p class="section-text">
                     Plan Your Travel Itinerary With Our List Of The Best Places To Visit In Sri Lanka.
@@ -232,6 +179,7 @@
 
             </div>
         </section>
+
 
         <!--
           - #Vehicles
@@ -259,251 +207,20 @@
         <!--
           - #PACKAGE
         -->
-
         <section class="package" id="package">
             <div class="container">
 
-                <p class="section-subtitle">Popular Packages</p>
+                <p class="section-subtitle">Discover Exciting Packages</p>
 
-                <h2 class="h2 section-title">Checkout Our Packages</h2>
+                <h2 class="h2 section-title">Check Out Our Popular Packages</h2>
 
                 <p class="section-text">
-                    Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque
-                    laudantium.
-                    Sit ornare
-                    mollitia tenetur, aptent.
+                    Explore our carefully chosen travel packages, designed to offer you the best experiences and adventures in Sri Lanka.
                 </p>
 
-                <ul class="package-list">
 
-                    <li>
-                        <div class="package-card">
-
-                            <figure class="card-banner">
-                                <img src="./assets/images/packege-1.jpg" alt="Experience The Great Holiday On Beach"
-                                     loading="lazy">
-                            </figure>
-
-                            <div class="card-content">
-
-                                <h3 class="h3 card-title">Experience The Great Holiday On Beach</h3>
-
-                                <p class="card-text">
-                                    Laoreet, voluptatum nihil dolor esse quaerat mattis explicabo maiores, est aliquet
-                                    porttitor! Eaque,
-                                    cras, aspernatur.
-                                </p>
-
-                                <ul class="card-meta-list">
-
-                                    <li class="card-meta-item">
-                                        <div class="meta-box">
-                                            <ion-icon name="time"></ion-icon>
-
-                                            <p class="text">7D/6N</p>
-                                        </div>
-                                    </li>
-
-                                    <li class="card-meta-item">
-                                        <div class="meta-box">
-                                            <ion-icon name="people"></ion-icon>
-
-                                            <p class="text">pax: 10</p>
-                                        </div>
-                                    </li>
-
-                                    <li class="card-meta-item">
-                                        <div class="meta-box">
-                                            <ion-icon name="location"></ion-icon>
-
-                                            <p class="text">Malaysia</p>
-                                        </div>
-                                    </li>
-
-                                </ul>
-
-                            </div>
-
-                            <div class="card-price">
-
-<!--                                <div class="wrapper">-->
-
-<!--                                    <p class="reviews">(25 reviews)</p>-->
-
-<!--                                    <div class="card-rating">-->
-<!--                                        <ion-icon name="star"></ion-icon>-->
-<!--                                        <ion-icon name="star"></ion-icon>-->
-<!--                                        <ion-icon name="star"></ion-icon>-->
-<!--                                        <ion-icon name="star"></ion-icon>-->
-<!--                                        <ion-icon name="star"></ion-icon>-->
-<!--                                    </div>-->
-
-<!--                                </div>-->
-
-                                <p class="price">
-                                    $750
-                                    <span>/ per person</span>
-                                </p>
-
-<!--                                <button class="btn btn-secondary">Book Now</button>-->
-
-                            </div>
-
-                        </div>
-                    </li>
-
-                    <li>
-                        <div class="package-card">
-
-                            <figure class="card-banner">
-                                <img src="./assets/images/packege-2.jpg" alt="Summer Holiday To The Oxolotan River"
-                                     loading="lazy">
-                            </figure>
-
-                            <div class="card-content">
-
-                                <h3 class="h3 card-title">Summer Holiday To The Oxolotan River</h3>
-
-                                <p class="card-text">
-                                    Laoreet, voluptatum nihil dolor esse quaerat mattis explicabo maiores, est aliquet
-                                    porttitor! Eaque,
-                                    cras, aspernatur.
-                                </p>
-
-                                <ul class="card-meta-list">
-
-                                    <li class="card-meta-item">
-                                        <div class="meta-box">
-                                            <ion-icon name="time"></ion-icon>
-
-                                            <p class="text">7D/6N</p>
-                                        </div>
-                                    </li>
-
-                                    <li class="card-meta-item">
-                                        <div class="meta-box">
-                                            <ion-icon name="people"></ion-icon>
-
-                                            <p class="text">pax: 10</p>
-                                        </div>
-                                    </li>
-
-                                    <li class="card-meta-item">
-                                        <div class="meta-box">
-                                            <ion-icon name="location"></ion-icon>
-
-                                            <p class="text">Malaysia</p>
-                                        </div>
-                                    </li>
-
-                                </ul>
-
-                            </div>
-
-                            <div class="card-price">
-
-                                <div class="wrapper">
-
-                                    <p class="reviews">(20 reviews)</p>
-
-                                    <div class="card-rating">
-                                        <ion-icon name="star"></ion-icon>
-                                        <ion-icon name="star"></ion-icon>
-                                        <ion-icon name="star"></ion-icon>
-                                        <ion-icon name="star"></ion-icon>
-                                        <ion-icon name="star"></ion-icon>
-                                    </div>
-
-                                </div>
-
-                                <p class="price">
-                                    $520
-                                    <span>/ per person</span>
-                                </p>
-
-                                <button class="btn btn-secondary">Book Now</button>
-
-                            </div>
-
-                        </div>
-                    </li>
-
-                    <li>
-                        <div class="package-card">
-
-                            <figure class="card-banner">
-                                <img src="./assets/images/packege-3.jpg" alt="Santorini Island's Weekend Vacation"
-                                     loading="lazy">
-                            </figure>
-
-                            <div class="card-content">
-
-                                <h3 class="h3 card-title">Santorini Island's Weekend Vacation</h3>
-
-                                <p class="card-text">
-                                    Laoreet, voluptatum nihil dolor esse quaerat mattis explicabo maiores, est aliquet
-                                    porttitor! Eaque,
-                                    cras, aspernatur.
-                                </p>
-
-                                <ul class="card-meta-list">
-
-                                    <li class="card-meta-item">
-                                        <div class="meta-box">
-                                            <ion-icon name="time"></ion-icon>
-
-                                            <p class="text">7D/6N</p>
-                                        </div>
-                                    </li>
-
-                                    <li class="card-meta-item">
-                                        <div class="meta-box">
-                                            <ion-icon name="people"></ion-icon>
-
-                                            <p class="text">pax: 10</p>
-                                        </div>
-                                    </li>
-
-                                    <li class="card-meta-item">
-                                        <div class="meta-box">
-                                            <ion-icon name="location"></ion-icon>
-
-                                            <p class="text">Malaysia</p>
-                                        </div>
-                                    </li>
-
-                                </ul>
-
-                            </div>
-
-                            <div class="card-price">
-
-                                <div class="wrapper">
-
-                                    <p class="reviews">(40 reviews)</p>
-
-                                    <div class="card-rating">
-                                        <ion-icon name="star"></ion-icon>
-                                        <ion-icon name="star"></ion-icon>
-                                        <ion-icon name="star"></ion-icon>
-                                        <ion-icon name="star"></ion-icon>
-                                        <ion-icon name="star"></ion-icon>
-                                    </div>
-
-                                </div>
-
-                                <p class="price">
-                                    $660
-                                    <span>/ per person</span>
-                                </p>
-
-                                <button class="btn btn-secondary">Book Now</button>
-
-                            </div>
-
-                        </div>
-                    </li>
-
+                <ul class="package-list" id="package-list">
+                    <!-- Cards will be dynamically loaded here -->
                 </ul>
 
                 <button class="btn btn-primary" onclick="scrollToContact()">View All Packages</button>
@@ -521,14 +238,12 @@
 
                 <p class="section-subtitle">Photo Gallery</p>
 
-                <h2 class="h2 section-title">Photo's From Travellers</h2>
+                <h2 class="h2 section-title">Photos from Travelers</h2>
 
                 <p class="section-text">
-                    Fusce hic augue velit wisi quibusdam pariatur, iusto primis, nec nemo, rutrum. Vestibulum cumque
-                    laudantium.
-                    Sit ornare
-                    mollitia tenetur, aptent.
+                    Take a look at some amazing photos shared by our travelers. These snapshots capture the beauty and adventure of their journeys.
                 </p>
+
 
                 <ul class="gallery-list">
 
@@ -540,13 +255,13 @@
 
                     <li class="gallery-item">
                         <figure class="gallery-image">
-                            <img src="./assets/images/gallery-2.jpg" alt="Gallery image">
+                            <img src="./assets/images/gallery-2.jpeg" alt="Gallery image">
                         </figure>
                     </li>
 
                     <li class="gallery-item">
                         <figure class="gallery-image">
-                            <img src="./assets/images/gallery-3.jpg" alt="Gallery image">
+                            <img src="./assets/images/gallery-3.jpeg" alt="Gallery image">
                         </figure>
                     </li>
 
@@ -676,7 +391,7 @@
                     <li class="contact-item">
                         <ion-icon name="call-outline"></ion-icon>
 
-                        <a href="tel:+01123456790" class="contact-link">+01 (123) 4567 90</a>
+                        <a href="tel:+94772323766" class="contact-link">+94 77 232 3766</a>
                     </li>
 
                     <li class="contact-item">
@@ -694,20 +409,6 @@
                 </ul>
 
             </div>
-
-            <!--        <div class="footer-form">-->
-
-            <!--          <p class="form-text">-->
-            <!--            Subscribe our newsletter for more update & news !!-->
-            <!--          </p>-->
-
-            <!--          <form action="" class="form-wrapper">-->
-            <!--            <input type="email" name="email" class="input-field" placeholder="Enter Your Email" required>-->
-
-            <!--            <button type="submit" class="btn btn-secondary">Subscribe</button>-->
-            <!--          </form>-->
-
-            <!--        </div>-->
 
         </div>
     </div>
@@ -746,6 +447,7 @@
 <script src="./assets/js/script.js"></script>
 <script src="./assets/js/places.js"></script>
 <script src="./assets/js/vehicles.js"></script>
+<script src="./assets/js/packages.js"></script>
 
 <!--
   - ionicon link
