--- a/index.html
+++ b/index.html
@@ -5,7 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gangawata Tours</title>
+    <title>Gangawata Tours - Explore Sri Lanka with Us</title>
+
+    <!-- Meta Tags for SEO -->
+    <meta name="description" content="Gangawata Tours offers unforgettable journeys across Sri Lanka. Explore pristine beaches, wildlife safaris, and historical landmarks with our personalized service.">
+    <meta name="keywords" content="Sri Lanka tours, travel Sri Lanka, Sri Lanka vacations, Gangawata Tours, Sri Lanka travel packages, Sri Lanka destinations">
+    <meta name="author" content="Gangawata Tours">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://gangawata.lk/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gangawata.lk/">
+    <meta property="og:title" content="Gangawata Tours - Discover Sri Lanka with Us">
+    <meta property="og:description" content="Gangawata Tours offers unforgettable journeys across Sri Lanka. Explore pristine beaches, wildlife safaris, and historical landmarks with our personalized service.">
+    <meta property="og:image" content="https://gangawata.lk/assets/images/hero-img.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://gangawata.lk/">
+    <meta property="twitter:title" content="Gangawata Tours - Discover Sri Lanka with Us">
+    <meta property="twitter:description" content="Gangawata Tours offers unforgettable journeys across Sri Lanka. Explore pristine beaches, wildlife safaris, and historical landmarks with our personalized service.">
+    <meta property="twitter:image" content="https://gangawata.lk/assets/images/hero-img.png">
+
 
     <!--
       - favicon
