--- a/index.html
+++ b/index.html
@@ -66,10 +66,16 @@
     <div class="header-top">
         <div class="container">
 
-            <a href="tel:+94772323766" class="helpline-box">
-
-                <div class="icon-box">
-                    <ion-icon name="call-outline"></ion-icon>
+            <div class="helpline-box">
+                <div class="icon-row">
+                    <!-- Phone Icon -->
+                    <a href="tel:+94772323766" class="icon-box">
+                        <ion-icon name="call-outline"></ion-icon>
+                    </a>
+                    <!-- WhatsApp Icon -->
+                    <a href="https://wa.me/94772323766" class="icon-box" target="_blank" rel="noopener noreferrer">
+                        <ion-icon name="logo-whatsapp"></ion-icon>
+                    </a>
                 </div>
 
                 <div class="wrapper">
@@ -78,7 +84,7 @@
                     <p class="helpline-number">+94 77 232 3766</p>
                 </div>
 
-            </a>
+            </div>
 
             <a href="#" class="logo">
                 <img src="./assets/images/logo.png" alt="Gangawata logo" style="width: 135px">
