--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <meta property="og:url" content="https://gangawata.lk/">
     <meta property="og:title" content="Gangawata Tours - Discover Sri Lanka with Us">
     <meta property="og:description" content="Gangawata Tours offers unforgettable journeys across Sri Lanka. Explore pristine beaches, wildlife safaris, and historical landmarks with our personalized service.">
-    <meta property="og:image" content="https://gangawata.lk/assets/images/hero-img.png">
+    <meta property="og:image" content="./assets/images/logo-sub.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://gangawata.lk/">
     <meta property="twitter:title" content="Gangawata Tours - Discover Sri Lanka with Us">
     <meta property="twitter:description" content="Gangawata Tours offers unforgettable journeys across Sri Lanka. Explore pristine beaches, wildlife safaris, and historical landmarks with our personalized service.">
-    <meta property="twitter:image" content="https://gangawata.lk/assets/images/hero-img.png">
+    <meta property="twitter:image" content="./assets/images/logo-sub.jpg">
 
 
     <!--
