--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
 
             <a href="#" class="logo">
-                <img src="./assets/images/logo.png" alt="Gangawata logo" style="width: 135px">
+                    <img src="./assets/images/logo.png" alt="Gangawata logo" style="width: 135px">
             </a>
 
             <div class="header-btn-group">
@@ -448,7 +448,7 @@
             </p>
             <ul class="footer-bottom-list">
                 <li>
-                    <a href="#" class="footer-bottom-link">
+                    <a href="https://www.gtwolabs.com" class="footer-bottom-link">
                         <img src="./assets/images/g2_logo.png" alt="G2 Labs Logo" style="vertical-align: middle;">
                         powered by G2 Labs
                     </a>
